# jane-street-puzzles

./: .clang-format  .gitignore  CMakeLists.txt  README.md
2025/april/: sum-one-somewhere.md
2025/july/: robot-road-trip.md
2025/june/: CMakeLists.txt  partridge_tiling.h  partridge_tiling_solver.h  some-ones-somewhere.md  some_ones_somewhere.cpp  some_ones_somewhere.ipynb  some_ones_somewhere.nb
2025/march/: integer_factorizations.h  mirror_grid.h  mirror_grid_solver.h  mirrors-3.md  mirrors_3.cpp  mirrors_3.ipynb  mirrors_3.md
2025/may/: CMakeLists.txt  number-cross-5.md  number_cross_5.cpp  number_cross_5.ipynb  number_cross_cell_partitions.h  number_cross_grid.h  number_cross_grid_predicates.h  number_cross_grid_solver.h
april-2025/: sum-one-somewhere.md  sum-one-somewhere.py  sum-one-somewhere.wl
cmake/: FetchSpdLog.cmake
june-2025/: partridge_tiling.h  partridge_tiling_solver.h  some_ones_somewhere.cpp  some_ones_somewhere.nb
march-2025/: CMakeLists.txt  integer_factorizations.h  mirror_grid.h  mirrors_3.cpp  problem.md
may-2025/: CMakeLists.txt  number-cross-5.md  number_cross_5.cpp  number_cross_5_single.cpp  number_cross_cell.h  number_cross_cell_partitions.h  number_cross_grid.h  number_cross_grid_predicates.h  number_cross_grid_solver.h  test_number_cross_5.cpp
utils/: base.h  restorer.h  thread_mapper.h
